--- a/exemplo.html
+++ b/exemplo.html
@@ -1,13 +1,17 @@
 <!--
   Este script manipula o player do youtube e envia ao mautic os plays e tambem
   informa se o lead assistiu o video até o fim
+
+  para utilizar basta trocar o ID do vídeo no iframe abaixo: (Exemplo: NpEaa2P7qZI)
+
+  e depois inserir o endereço do seu mautic na variável mauticUrl.
 -->
 <iframe id="player" src="https://www.youtube.com/embed/NpEaa2P7qZI?enablejsapi=1"></iframe>
 <script>
   // este é o manipulador do video
   var player;
   // coloque aqui o URL do seu Mautic
-  var mauticUrl = "https://mkt.site.com";
+  var mauticUrl = "https://mkt.teste.com";
 
   function onYouTubeIframeAPIReady() {
     player = new YT.Player('player', {
@@ -17,18 +21,20 @@
     });
   }
   function onPlayerStateChange(event) {
+    var videoUrl = event.target.getVideoUrl();
+    var videoTitle = player.getVideoData()['title'];
     var videoid = player.getVideoData()['video_id'];
     var video_tag = 'youtube_' + videoid;
     var video_end_tag = video_tag + "_end";
     switch (event.data) {
       case 0: // aqui é o fim do video
         tracking = new Image();
-        tracking.src = mauticUrl + '/mtracking.gif?tags=' + video_tag + ',' + video_end_tag;
+        tracking.src = mauticUrl + '/mtracking.gif?tags=' + video_tag + ',' + video_end_tag + '&page_url=' + videoUrl + '&page_title=' + videoTitle;
         document.body.appendChild(tracking);
         break;
       case 1: // aqui é o evento play
         tracking = new Image();
-        tracking.src = mauticUrl + '/mtracking.gif?tags=' + video_tag;
+        tracking.src = mauticUrl + '/mtracking.gif?tags=' + video_tag + '&page_url=' + videoUrl + '&page_title=' + videoTitle;;
         document.body.appendChild(tracking);
     }
   }
