Ajustando o Height do Video

--- a/exemplo.html
+++ b/exemplo.html
@@ -6,7 +6,7 @@
 
   e depois inserir o endereço do seu mautic na variável mauticUrl.
 -->
-<iframe id="player" src="https://www.youtube.com/embed/NpEaa2P7qZI?enablejsapi=1"></iframe>
+<iframe id="player" height="500px" src="https://www.youtube.com/embed/NpEaa2P7qZI?enablejsapi=1"></iframe>
 <script>
   // este é o manipulador do video
   var player;
